<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/GridLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:useDefaultMargins="true"
    tools:context="com.example.mortagecalculator.MainActivity" >

    <TextView
        android:id="@+id/amountPurchasePrice"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/purchase_price"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/amountEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:digits="0123456789"
        android:inputType="number" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/amountDisplayPurchasePrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:layout_row="0"
        android:background="@android:color/holo_blue_light"
        android:labelFor="@+id/amountEditText"
        android:padding="@dimen/textview_padding"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/amountDownPayment"
        android:layout_column="0"
        android:layout_gravity="end"
        android:layout_row="1"
        android:text="@string/down_payment"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/downPaymentEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:digits="0123456789"
        android:inputType="number" />

    <TextView
        android:id="@+id/displayDownPayment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:layout_row="1"
        android:background="@android:color/holo_blue_dark"
        android:labelFor="@+id/downPaymentEditText"
        android:padding="@dimen/textview_padding"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/amountInterestRate"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="end"
        android:layout_row="2"
        android:text="@string/interest_rate"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/interestEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:digits="0123456789"
        android:inputType="number"
        android:maxLength="3" />

    <TextView
        android:id="@+id/displayInterestRate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:layout_row="2"
        android:background="@android:color/holo_blue_light"
        android:labelFor="@+id/interestEditText"
        android:padding="@dimen/textview_padding"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/customPercentView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|center_vertical"
        android:text="@string/custom_year"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <SeekBar
        android:id="@+id/customYearSeekBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:max="30"
        android:progress="15" />

    <LinearLayout
        android:id="@+id/yearLinearLayout"
        android:layout_column="0"
        android:layout_columnWeight="1"
        android:layout_gravity="fill_horizontal"
        android:gravity="fill_horizontal" >

        <TextView
            android:id="@+id/year10TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0"
            android:gravity="center"
            android:text="@string/year_10"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/year20TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/year_20"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/customYearLinearLayout"
        android:layout_column="1"
        android:layout_columnWeight="0"
        android:layout_gravity="fill_horizontal"
        android:gravity="fill_horizontal" >

        <TextView
            android:id="@+id/year30TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/year_30"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/yearCustomTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/year_custom"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/monthlyPaymentLinearLayout"
        android:layout_columnWeight="0"
        android:layout_gravity="fill_horizontal"
        android:gravity="fill_horizontal" >

        <TextView
            android:id="@+id/monthly10TextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="@dimen/textview_margin"
            android:layout_weight="1"
            android:background="@android:color/holo_orange_light"
            android:gravity="center"
            android:padding="@dimen/textview_padding"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/monthly20TextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@android:color/holo_orange_light"
            android:gravity="center"
            android:padding="@dimen/textview_padding"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/customMonthlyPaymentLinearLayout"
        android:layout_columnWeight="0"
        android:layout_gravity="fill_horizontal"
        android:gravity="fill_horizontal" >

        <TextView
            android:id="@+id/monthly30TextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="@dimen/textview_margin"
            android:layout_weight="1"
            android:background="@android:color/holo_orange_light"
            android:gravity="center"
            android:padding="@dimen/textview_padding"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/monthlyCustomTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@android:color/holo_orange_light"
            android:gravity="center"
            android:padding="@dimen/textview_padding"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>
    <Space />
    <Space />

</GridLayout>
